Se ha agregado un hr y footer al index

--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
             </figcaption>
         </figure>
     </ol>
+    <hr>
+    <footer>
+        <p>Texto de pie de página</p>
+    </footer>
 </body>
 </html>
 
