barra de navegacion con display inline-block

--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 <body class="body">
     <header>
         <h1 class="titulo">Primera Tarea</h1>
-        <nav class="barraNav">
-            <p class="pNav">Inicio</p>
-            <p class="pNav">¿Qué hacemos?</p>
-            <p class="pNav">Nuestro Trabajo</p>
-            <p class="pNav">Blog</p>
-            <p class="pNav">Contacto</p>
+        <nav id="navega">
+            <ul>
+                <li>Inicio</li>
+                <li>¿Qué hacemos?</li>
+                <li>Nuestro Trabajo</li>
+                <li>Blog</li>
+                <li>Contacto</li>
+            </ul>            
         </nav>
     </header>
     <hr>
     <p>El siguiente es un ejemplo de una listas ordenadas y desordenadas, elementos con la etiqueta 'figure' y 'figcaption'</p>
     <br>
     <p>Paises del mundo:</p>
-    <ol>
-        <li>Europa Occidental:
+    <ol >
+        <li >Europa Occidental:
             <br>
             <ul>
                 <br>
